--- a/application/deploy-all.yaml
+++ b/application/deploy-all.yaml
@@ -1,3 +1,13 @@
+apiVersion: v1
+kind: StorageClass
+metadata:
+  name: nfs-client
+provisioner: kubernetes.io/nfs
+parameters:
+  server: 10.10.140.201 # NFS sunucu IP adresi
+  path: /nfs/wordpress # NFS paylaşım yolu
+reclaimPolicy: Retain
+---
 # 2. PersistentVolume (PV)
 apiVersion: v1
 kind: PersistentVolume
