--- a/application/deploy-all.yaml
+++ b/application/deploy-all.yaml
@@ -1,12 +1,4 @@
-apiVersion: v1
-kind: StorageClass
-metadata:
-  name: nfs-client
-provisioner: kubernetes.io/nfs
-parameters:
-  server: 10.10.140.201 # NFS sunucu IP adresi
-  path: /nfs/wordpress # NFS paylaşım yolu
-reclaimPolicy: Retain
+
 ---
 # 2. PersistentVolume (PV)
 apiVersion: v1
@@ -31,6 +23,40 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wordpress-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: nfs-client
+
+
+
+---
+# 2. PersistentVolume (PV)
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mysql-pv
+spec:
+  capacity:
+    storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs-client
+  nfs:
+    path: /nfs/mysql # NFS paylaşımlarının yolu
+    server: 10.10.140.201 # NFS sunucu IP adresi (yani Master)
+
+---
+# 3. PersistentVolumeClaim (PVC)
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
 spec:
   accessModes:
     - ReadWriteMany
@@ -71,7 +97,7 @@ spec:
       volumes:
         - name: mysql-pv
           persistentVolumeClaim:
-            claimName: wordpress-pvc
+            claimName: mysql-pvc
 
 ---
 apiVersion: v1
